--- a/index.html
+++ b/index.html
@@ -3,41 +3,93 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ready4Exam - Table Automation</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" />
-</head>
-<body class="bg-gray-50 text-gray-900">
-  <div class="max-w-2xl mx-auto p-6">
-    <h1 class="text-2xl font-bold mb-4">Ready4Exam - NCERT Automation (Gemini)</h1>
+  <title>Ready4Exam | Table Automation</title>
 
-    <div class="space-y-3">
-      <select id="classSelect" class="border p-2 rounded w-full">
+  <!-- Tailwind CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Styling -->
+  <style>
+    body {
+      background-color: #f9fafb;
+      font-family: 'Inter', sans-serif;
+    }
+    select, button {
+      border-radius: 0.5rem;
+    }
+    #log {
+      font-family: monospace;
+      background: #111827;
+      color: #e5e7eb;
+      border-radius: 0.5rem;
+      padding: 1rem;
+      height: 300px;
+      overflow-y: auto;
+      white-space: pre-line;
+    }
+  </style>
+</head>
+
+<body class="min-h-screen flex flex-col items-center justify-center p-6">
+  <header class="text-center mb-8">
+    <h1 class="text-3xl font-bold text-gray-800">Ready4Exam — Automation Tool</h1>
+    <p class="text-gray-500">Automated NCERT question generation powered by <strong>Gemini 2.5 Flash</strong></p>
+  </header>
+
+  <main class="bg-white shadow-lg rounded-2xl p-6 w-full max-w-2xl space-y-4">
+    <!-- Class Dropdown -->
+    <div>
+      <label for="classSelect" class="block text-gray-700 mb-1 font-medium">Select Class</label>
+      <select id="classSelect" class="w-full border border-gray-300 p-2">
         <option value="">-- Select Class --</option>
         <option value="6">Class 6</option>
         <option value="7">Class 7</option>
         <option value="8">Class 8</option>
         <option value="9">Class 9</option>
         <option value="10">Class 10</option>
-        <option value="11">Class 11</option>
-        <option value="12">Class 12</option>
       </select>
+    </div>
 
-      <select id="subjectSelect" class="border p-2 rounded w-full" disabled>
+    <!-- Subject Dropdown -->
+    <div>
+      <label for="subjectSelect" class="block text-gray-700 mb-1 font-medium">Select Subject</label>
+      <select id="subjectSelect" class="w-full border border-gray-300 p-2" disabled>
         <option value="">-- Select Subject --</option>
       </select>
+    </div>
 
-      <select id="chapterSelect" class="border p-2 rounded w-full" disabled>
+    <!-- Chapter Dropdown -->
+    <div>
+      <label for="chapterSelect" class="block text-gray-700 mb-1 font-medium">Select Chapter</label>
+      <select id="chapterSelect" class="w-full border border-gray-300 p-2" disabled>
         <option value="">-- Select Chapter --</option>
       </select>
+    </div>
 
-      <button id="generateBtn" class="bg-blue-600 text-white px-4 py-2 rounded disabled:bg-gray-400" disabled>
+    <!-- Generate Button -->
+    <div class="text-center">
+      <button id="generateBtn"
+              class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg disabled:bg-gray-400 disabled:cursor-not-allowed"
+              disabled>
         🚀 Generate Questions
       </button>
-
-      <pre id="log" class="bg-black text-green-300 p-3 rounded h-72 overflow-y-auto text-sm"></pre>
     </div>
-  </div>
 
+    <!-- Logs -->
+    <div>
+      <h2 class="text-lg font-semibold text-gray-700 mb-2">Activity Log</h2>
+      <pre id="log"></pre>
+    </div>
+  </main>
+
+  <!-- Supabase Client -->
+  <script type="module" src="./supabaseClient.js"></script>
+
+  <!-- Gemini Frontend Script -->
   <script type="module" src="./gemini_frontend.js"></script>
+
+  <footer class="text-center mt-8 text-gray-400 text-sm">
+    © 2025 Ready4Industry — All rights reserved.
+  </footer>
 </body>
 </html>
