--- a/index.html
+++ b/index.html
@@ -3,93 +3,38 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ready4Exam | Table Automation</title>
-
-  <!-- Tailwind CDN -->
+  <title>Ready4Exam – Developer Automation Tool</title>
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Styling -->
-  <style>
-    body {
-      background-color: #f9fafb;
-      font-family: 'Inter', sans-serif;
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: { sans: ['Inter', 'sans-serif'] },
+          colors: {
+            'cbse-blue': '#1a3e6a',
+            'accent-gold': '#ffb703',
+          }
+        }
+      }
     }
-    select, button {
-      border-radius: 0.5rem;
-    }
-    #log {
-      font-family: monospace;
-      background: #111827;
-      color: #e5e7eb;
-      border-radius: 0.5rem;
-      padding: 1rem;
-      height: 300px;
-      overflow-y: auto;
-      white-space: pre-line;
-    }
-  </style>
+  </script>
 </head>
 
-<body class="min-h-screen flex flex-col items-center justify-center p-6">
-  <header class="text-center mb-8">
-    <h1 class="text-3xl font-bold text-gray-800">Ready4Exam — Automation Tool</h1>
-    <p class="text-gray-500">Automated NCERT question generation powered by <strong>Gemini 2.5 Flash</strong></p>
+<body class="bg-gray-50 font-sans min-h-screen">
+  <header class="bg-cbse-blue text-white py-4 shadow-md">
+    <div class="max-w-6xl mx-auto px-6 flex justify-between items-center">
+      <h1 class="text-xl font-bold">Ready4Exam – Automation Console</h1>
+      <span class="text-sm opacity-80">Developer Use Only</span>
+    </div>
   </header>
 
-  <main class="bg-white shadow-lg rounded-2xl p-6 w-full max-w-2xl space-y-4">
-    <!-- Class Dropdown -->
-    <div>
-      <label for="classSelect" class="block text-gray-700 mb-1 font-medium">Select Class</label>
-      <select id="classSelect" class="w-full border border-gray-300 p-2">
-        <option value="">-- Select Class --</option>
-        <option value="6">Class 6</option>
-        <option value="7">Class 7</option>
-        <option value="8">Class 8</option>
-        <option value="9">Class 9</option>
-        <option value="10">Class 10</option>
-      </select>
-    </div>
+  <main class="max-w-4xl mx-auto p-6 space-y-6">
+    <section class="bg-white shadow-md rounded-xl p-6">
+      <h2 class="text-2xl font-bold mb-4 text-cbse-blue">Curriculum Loader</h2>
 
-    <!-- Subject Dropdown -->
-    <div>
-      <label for="subjectSelect" class="block text-gray-700 mb-1 font-medium">Select Subject</label>
-      <select id="subjectSelect" class="w-full border border-gray-300 p-2" disabled>
-        <option value="">-- Select Subject --</option>
-      </select>
-    </div>
-
-    <!-- Chapter Dropdown -->
-    <div>
-      <label for="chapterSelect" class="block text-gray-700 mb-1 font-medium">Select Chapter</label>
-      <select id="chapterSelect" class="w-full border border-gray-300 p-2" disabled>
-        <option value="">-- Select Chapter --</option>
-      </select>
-    </div>
-
-    <!-- Generate Button -->
-    <div class="text-center">
-      <button id="generateBtn"
-              class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg disabled:bg-gray-400 disabled:cursor-not-allowed"
-              disabled>
-        🚀 Generate Questions
-      </button>
-    </div>
-
-    <!-- Logs -->
-    <div>
-      <h2 class="text-lg font-semibold text-gray-700 mb-2">Activity Log</h2>
-      <pre id="log"></pre>
-    </div>
-  </main>
-
-  <!-- Supabase Client -->
-  <script type="module" src="./supabaseClient.js"></script>
-
-  <!-- Gemini Frontend Script -->
-  <script type="module" src="./gemini_frontend.js"></script>
-
-  <footer class="text-center mt-8 text-gray-400 text-sm">
-    © 2025 Ready4Industry — All rights reserved.
-  </footer>
-</body>
-</html>
+      <!-- Dropdowns -->
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+        <div>
+          <label class="block text-sm font-semibold mb-1">Select Class</label>
+          <select id="classSelect" class="w-full border border-gray-300 rounded-lg p-2">
+            <option value="">-- Select Clas
