--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ready4Exam – Developer Automation Tool</title>
+
+  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -21,6 +23,7 @@
 </head>
 
 <body class="bg-gray-50 font-sans min-h-screen">
+  <!-- Header -->
   <header class="bg-cbse-blue text-white py-4 shadow-md">
     <div class="max-w-6xl mx-auto px-6 flex justify-between items-center">
       <h1 class="text-xl font-bold">Ready4Exam – Automation Console</h1>
@@ -28,13 +31,88 @@
     </div>
   </header>
 
+  <!-- Main Content -->
   <main class="max-w-4xl mx-auto p-6 space-y-6">
+
+    <!-- Curriculum Loader Section -->
     <section class="bg-white shadow-md rounded-xl p-6">
       <h2 class="text-2xl font-bold mb-4 text-cbse-blue">Curriculum Loader</h2>
 
       <!-- Dropdowns -->
       <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+        <!-- Class Dropdown -->
         <div>
           <label class="block text-sm font-semibold mb-1">Select Class</label>
           <select id="classSelect" class="w-full border border-gray-300 rounded-lg p-2">
-            <option value="">-- Select Clas
+            <option value="">-- Select Class --</option>
+            <option value="5">Class 5</option>
+            <option value="6">Class 6</option>
+            <option value="7">Class 7</option>
+            <option value="8">Class 8</option>
+            <option value="9">Class 9</option>
+            <option value="10">Class 10</option>
+            <option value="11">Class 11</option>
+            <option value="12">Class 12</option>
+          </select>
+        </div>
+
+        <!-- Subject Dropdown -->
+        <div>
+          <label class="block text-sm font-semibold mb-1">Select Subject</label>
+          <select id="subjectSelect" disabled class="w-full border border-gray-300 rounded-lg p-2">
+            <option value="">-- Select Subject --</option>
+          </select>
+        </div>
+
+        <!-- Book Dropdown (for 11-12 only) -->
+        <div id="bookContainer" class="hidden">
+          <label class="block text-sm font-semibold mb-1">Select Book (11–12 only)</label>
+          <select id="bookSelect" class="w-full border border-gray-300 rounded-lg p-2">
+            <option value="">-- Select Book --</option>
+          </select>
+        </div>
+      </div>
+
+      <!-- Chapter Dropdown -->
+      <div class="mt-4">
+        <label class="block text-sm font-semibold mb-1">Select Chapter</label>
+        <select id="chapterSelect" disabled class="w-full border border-gray-300 rounded-lg p-2">
+          <option value="">-- Select Chapter --</option>
+        </select>
+      </div>
+
+      <!-- Buttons -->
+      <div class="flex space-x-4 mt-6">
+        <button id="generateBtn" disabled class="px-6 py-2 bg-cbse-blue text-white rounded-lg hover:bg-blue-800 transition">
+          Generate & Upload Questions
+        </button>
+        <button id="refreshBtn" disabled class="px-6 py-2 bg-yellow-500 text-white rounded-lg hover:bg-yellow-600 transition">
+          Refresh Questions
+        </button>
+      </div>
+    </section>
+
+    <!-- Developer Log Section -->
+    <section class="bg-white shadow-md rounded-xl p-6">
+      <h2 class="text-2xl font-bold mb-4 text-cbse-blue">Developer Log</h2>
+      <textarea
+        id="log"
+        readonly
+        class="w-full h-72 border border-gray-300 rounded-lg p-3 font-mono text-sm"
+        placeholder="Logs will appear here..."
+      ></textarea>
+    </section>
+
+  </main>
+
+  <!-- Footer -->
+  <footer class="text-center text-gray-500 py-4">
+    <p class="text-sm">
+      Ready4Exam Developer Tool – A part of the Ready4Industry initiative
+    </p>
+  </footer>
+
+  <!-- Script Link -->
+  <script type="module" src="./js/gemini_frontend.js"></script>
+</body>
+</html>
