--- a/index.html
+++ b/index.html
@@ -5,97 +5,60 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ready4Exam – Developer Automation Tool</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          fontFamily: { sans: ['Inter', 'sans-serif'] },
-          colors: {
-            'cbse-blue': '#1a3e6a',
-            'accent-gold': '#ffb703',
-          }
-        }
-      }
-    }
-  </script>
 </head>
 
 <body class="bg-gray-50 font-sans min-h-screen">
-  <!-- Header -->
-  <header class="bg-cbse-blue text-white py-4 shadow-md">
+  <header class="bg-blue-700 text-white py-4 shadow-md">
     <div class="max-w-6xl mx-auto px-6 flex justify-between items-center">
       <h1 class="text-xl font-bold">Ready4Exam – Automation Console</h1>
       <span class="text-sm opacity-80">Developer Use Only</span>
     </div>
   </header>
 
-  <!-- Main -->
   <main class="max-w-4xl mx-auto p-6 space-y-6">
-    <!-- Curriculum Loader -->
     <section class="bg-white shadow-md rounded-xl p-6">
-      <h2 class="text-2xl font-bold mb-4 text-cbse-blue">Curriculum Loader</h2>
+      <h2 class="text-2xl font-bold mb-4 text-blue-700">Curriculum Loader</h2>
 
-      <!-- Dropdowns -->
       <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-        <!-- Class -->
         <div>
           <label class="block text-sm font-semibold mb-1">Select Class</label>
           <select id="classSelect" class="w-full border border-gray-300 rounded-lg p-2">
             <option value="">-- Select Class --</option>
-            <option value="5">Class 5</option>
-            <option value="6">Class 6</option>
-            <option value="7">Class 7</option>
-            <option value="8">Class 8</option>
-            <option value="9">Class 9</option>
-            <option value="10">Class 10</option>
-            <option value="11">Class 11</option>
-            <option value="12">Class 12</option>
+            <option value="class11">Class 11</option>
+            <option value="class12">Class 12</option>
           </select>
         </div>
 
-        <!-- Subject -->
         <div>
           <label class="block text-sm font-semibold mb-1">Select Subject</label>
-          <select id="subjectSelect" class="w-full border border-gray-300 rounded-lg p-2" disabled>
-            <option value="">-- Select Subject --</option>
-          </select>
+          <select id="subjectSelect" class="w-full border border-gray-300 rounded-lg p-2" disabled></select>
         </div>
 
-        <!-- Book -->
         <div id="bookContainer" class="hidden">
           <label class="block text-sm font-semibold mb-1">Select Book</label>
-          <select id="bookSelect" class="w-full border border-gray-300 rounded-lg p-2">
-            <option value="">-- Select Book --</option>
-          </select>
+          <select id="bookSelect" class="w-full border border-gray-300 rounded-lg p-2"></select>
         </div>
       </div>
 
-      <!-- Chapter -->
       <div class="mt-4">
         <label class="block text-sm font-semibold mb-1">Select Chapter</label>
-        <select id="chapterSelect" class="w-full border border-gray-300 rounded-lg p-2" disabled>
-          <option value="">-- Select Chapter --</option>
-        </select>
+        <select id="chapterSelect" class="w-full border border-gray-300 rounded-lg p-2" disabled></select>
       </div>
 
-      <!-- Action Buttons -->
       <div class="flex gap-4 mt-6">
         <button id="generateBtn"
-          class="bg-cbse-blue text-white px-5 py-2 rounded-lg shadow disabled:opacity-50 disabled:cursor-not-allowed"
-          disabled>
+          class="bg-blue-700 text-white px-5 py-2 rounded-lg shadow disabled:opacity-50" disabled>
           🚀 Generate Questions
         </button>
         <button id="refreshBtn"
-          class="bg-accent-gold text-black px-5 py-2 rounded-lg shadow disabled:opacity-50 disabled:cursor-not-allowed"
-          disabled>
+          class="bg-yellow-400 text-black px-5 py-2 rounded-lg shadow disabled:opacity-50" disabled>
           🔄 Refresh Table
         </button>
       </div>
     </section>
 
-    <!-- Logs -->
     <section class="bg-white shadow-md rounded-xl p-6">
-      <h2 class="text-xl font-bold mb-2 text-cbse-blue">Logs</h2>
+      <h2 class="text-xl font-bold mb-2 text-blue-700">Logs</h2>
       <textarea id="log" readonly
         class="w-full h-60 border border-gray-300 rounded-lg p-3 text-sm font-mono bg-gray-50"></textarea>
     </section>
@@ -105,7 +68,7 @@
     Ready4Exam Developer Tool © 2025 | For internal use only
   </footer>
 
-  <!-- Main Script -->
-  <script src="js/gemini_frontend.js"></script>
+  <!-- CRITICAL: must be type="module" -->
+  <script type="module" src="./js/gemini_frontend.js"></script>
 </body>
 </html>
