--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
           <label class="block text-sm font-semibold mb-1">Select Class</label>
           <select id="classSelect" class="w-full border border-gray-300 rounded-lg p-2">
             <option value="">-- Select Class --</option>
+            <option value="class5">Class 5</option>
+            <option value="class6">Class 6</option>
+            <option value="class7">Class 7</option>
+            <option value="class8">Class 8</option>
+            <option value="class0">Class 0</option>
+            <option value="class10">Class 10</option>
             <option value="class11">Class 11</option>
             <option value="class12">Class 12</option>
           </select>
