--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
   </header>
 
   <main class="max-w-4xl mx-auto p-6 space-y-6">
+    <!-- Curriculum Loader -->
     <section class="bg-white shadow-md rounded-xl p-6">
       <h2 class="text-2xl font-bold mb-4 text-blue-700">Curriculum Loader</h2>
 
       <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+        
+        <!-- Class -->
         <div>
           <label class="block text-sm font-semibold mb-1">Select Class</label>
           <select id="classSelect" class="w-full border border-gray-300 rounded-lg p-2">
@@ -28,53 +31,64 @@
             <option value="class6">Class 6</option>
             <option value="class7">Class 7</option>
             <option value="class8">Class 8</option>
-            <option value="class0">Class 0</option>
+            <option value="class9">Class 9</option>
             <option value="class10">Class 10</option>
             <option value="class11">Class 11</option>
             <option value="class12">Class 12</option>
           </select>
         </div>
 
+        <!-- Subject -->
         <div>
           <label class="block text-sm font-semibold mb-1">Select Subject</label>
           <select id="subjectSelect" class="w-full border border-gray-300 rounded-lg p-2" disabled></select>
         </div>
 
+        <!-- Book -->
         <div id="bookContainer" class="hidden">
           <label class="block text-sm font-semibold mb-1">Select Book</label>
           <select id="bookSelect" class="w-full border border-gray-300 rounded-lg p-2"></select>
         </div>
+
       </div>
 
+      <!-- Chapter -->
       <div class="mt-4">
         <label class="block text-sm font-semibold mb-1">Select Chapter</label>
         <select id="chapterSelect" class="w-full border border-gray-300 rounded-lg p-2" disabled></select>
       </div>
 
+      <!-- Buttons -->
       <div class="flex gap-4 mt-6">
         <button id="generateBtn"
-          class="bg-blue-700 text-white px-5 py-2 rounded-lg shadow disabled:opacity-50" disabled>
+          class="bg-blue-700 text-white px-5 py-2 rounded-lg shadow disabled:opacity-50"
+          disabled>
           🚀 Generate Questions
         </button>
+
         <button id="refreshBtn"
-          class="bg-yellow-400 text-black px-5 py-2 rounded-lg shadow disabled:opacity-50" disabled>
+          class="bg-yellow-400 text-black px-5 py-2 rounded-lg shadow disabled:opacity-50"
+          disabled>
           🔄 Refresh Table
         </button>
       </div>
     </section>
 
+    <!-- Logs -->
     <section class="bg-white shadow-md rounded-xl p-6">
       <h2 class="text-xl font-bold mb-2 text-blue-700">Logs</h2>
       <textarea id="log" readonly
         class="w-full h-60 border border-gray-300 rounded-lg p-3 text-sm font-mono bg-gray-50"></textarea>
     </section>
+
   </main>
 
   <footer class="text-center text-xs text-gray-500 py-4">
     Ready4Exam Developer Tool © 2025 | For internal use only
   </footer>
 
-  <!-- CRITICAL: must be type="module" -->
+  <!-- IMPORTANT: Load JS as ES module -->
   <script type="module" src="./js/gemini_frontend.js"></script>
+
 </body>
 </html>
