--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body class="bg-gray-50 font-sans min-h-screen">
+  <!-- Header -->
   <header class="bg-blue-700 text-white py-4 shadow-md">
     <div class="max-w-6xl mx-auto px-6 flex justify-between items-center">
       <h1 class="text-xl font-bold">Ready4Exam – Automation Console</h1>
@@ -15,26 +16,28 @@
     </div>
   </header>
 
+  <!-- Main -->
   <main class="max-w-4xl mx-auto p-6 space-y-6">
+
     <!-- Curriculum Loader -->
     <section class="bg-white shadow-md rounded-xl p-6">
       <h2 class="text-2xl font-bold mb-4 text-blue-700">Curriculum Loader</h2>
 
       <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-        
+
         <!-- Class -->
         <div>
           <label class="block text-sm font-semibold mb-1">Select Class</label>
           <select id="classSelect" class="w-full border border-gray-300 rounded-lg p-2">
             <option value="">-- Select Class --</option>
-            <option value="class5">Class 5</option>
-            <option value="class6">Class 6</option>
-            <option value="class7">Class 7</option>
-            <option value="class8">Class 8</option>
-            <option value="class9">Class 9</option>
-            <option value="class10">Class 10</option>
-            <option value="class11">Class 11</option>
-            <option value="class12">Class 12</option>
+            <option value="5">Class 5</option>
+            <option value="6">Class 6</option>
+            <option value="7">Class 7</option>
+            <option value="8">Class 8</option>
+            <option value="9">Class 9</option>
+            <option value="10">Class 10</option>
+            <option value="11">Class 11</option>
+            <option value="12">Class 12</option>
           </select>
         </div>
 
@@ -72,6 +75,7 @@
           🔄 Refresh Table
         </button>
       </div>
+
     </section>
 
     <!-- Logs -->
