--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <title>Ready4Exam – Developer Automation Tool</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="bg-gray-50 font-sans min-h-screen">
+
+  <!-- HEADER -->
   <header class="bg-blue-700 text-white py-4 shadow-md">
     <div class="max-w-6xl mx-auto px-6 flex justify-between items-center">
       <h1 class="text-xl font-bold">Ready4Exam – Automation Console</h1>
@@ -15,6 +18,10 @@
   </header>
 
   <main class="max-w-4xl mx-auto p-6 space-y-6">
+
+    <!-- ========================================================== -->
+    <!-- SECTION 1: Curriculum Loader -->
+    <!-- ========================================================== -->
     <section class="bg-white shadow-md rounded-xl p-6">
       <h2 class="text-2xl font-bold mb-4 text-blue-700">Curriculum Loader</h2>
 
@@ -50,6 +57,7 @@
         <select id="chapterSelect" class="w-full border border-gray-300 rounded-lg p-2" disabled></select>
       </div>
 
+      <!-- Buttons -->
       <div class="flex gap-4 mt-6">
         <button id="generateBtn"
           class="bg-blue-700 text-white px-5 py-2 rounded-lg shadow disabled:opacity-50"
@@ -62,14 +70,61 @@
           disabled>
           🔄 Refresh Table
         </button>
+
+        <!-- ⭐ NEW Bulk Generate Button -->
+        <button id="bulkGenerateBtn"
+          class="bg-purple-600 text-white px-5 py-2 rounded-lg shadow">
+          📚 Bulk Generate All Chapters
+        </button>
       </div>
+
+      <!-- ========================================================== -->
+      <!-- ⭐ NEW: Bulk Progress Bar -->
+      <!-- ========================================================== -->
+      <div id="bulkProgressContainer" class="hidden mt-6">
+        <div class="text-sm font-semibold mb-1 text-gray-700">Bulk Progress</div>
+
+        <div class="w-full bg-gray-200 h-3 rounded">
+          <div id="bulkProgressBarInner"
+               class="h-3 rounded bg-green-500 transition-all duration-300"
+               style="width:0%">
+          </div>
+        </div>
+
+        <div id="bulkProgressLabel" class="text-xs mt-1 text-gray-700">0 / 0</div>
+      </div>
+
+      <!-- ========================================================== -->
+      <!-- ⭐ NEW: Bulk Chapter Status Table -->
+      <!-- ========================================================== -->
+      <div class="mt-6">
+        <h3 class="font-bold text-gray-700 mb-2">Bulk Chapter Status</h3>
+
+        <table class="w-full text-left text-xs border-collapse border border-gray-300">
+          <thead class="bg-gray-100">
+            <tr>
+              <th class="border px-2 py-1">Chapter</th>
+              <th class="border px-2 py-1">Status</th>
+              <th class="border px-2 py-1">Table ID</th>
+            </tr>
+          </thead>
+
+          <tbody id="bulkStatusTbody"></tbody>
+        </table>
+      </div>
+
     </section>
 
+
+    <!-- ========================================================== -->
+    <!-- SECTION 2: Logs -->
+    <!-- ========================================================== -->
     <section class="bg-white shadow-md rounded-xl p-6">
       <h2 class="text-xl font-bold mb-2 text-blue-700">Logs</h2>
       <textarea id="log" readonly
         class="w-full h-60 border border-gray-300 rounded-lg p-3 text-sm font-mono bg-gray-50"></textarea>
     </section>
+
   </main>
 
   <footer class="text-center text-xs text-gray-500 py-4">
@@ -78,5 +133,6 @@
 
   <!-- module script -->
   <script type="module" src="./js/gemini_frontend.js"></script>
+
 </body>
 </html>
